--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
     <version>5.1.1</version>
 </dependency>
 
+<dependency>
+	 <groupId>com.google.code.gson</groupId>
+	 <artifactId>gson</artifactId>
+	 <version>2.12.1</version>
+</dependency>
+
 
    </dependencies>
    
